# inzynierka

./: .gitignore  CNAME  README.md  asset-manifest.json  docker-compose-dev.yaml  dockerfile-dev  index.html  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
public/: index.html
src/: App.js  app.js  index.js
src/api/: api.js
src/api/admin/: tournament_admin_api.js  user_admin_manageroles_api.js
src/api/tournament/: tournament_registration_api.js
src/api/user_interaction/: invitation_api.js  payment_api.js  user_api.js
src/components/Buttons/: log_out.js
src/components/Navbar/: NavBar.css  NavBar.js
src/components/Popups/: Popup.js
src/components/Single_Card/: Card_tour.js
src/components/Tournament/: tournament_content.js  tournament_controller.js  tournament_header.js  tournament_overlay.js
src/components/adminUsers/: adminUsers.js
src/components/api/: api.js  invitation_api.js  ladders_api.js  payment_api.js  result_proposal_api.js  tournament_CRUD_api.js  tournament_registration_api.js  user_api.js
src/components/calendar/: calendar_card.js  calendar_controller.js  (+1 more)
src/interfaces/: registrationsInterface.js
src/routes/: adminUsers.js  calendar_route.js  drabinka_route.js  edit_tournament.js  my_calendar_route.js  new_template.js  new_tournament.js  not_found.js  profile_route.js  ranking_route.js  token_route.js  tournament_play_route.js  tournament_route.js
src/styles/: App.css  index.css
static/css/: main.30ed0938.css  main.30ed0938.css.map
static/js/: main.3cbb1da4.js  main.3cbb1da4.js.map
(+145 files in other folders)
